# nacelle

./: .gitignore  Dockerfile  bootstrap.py  pyproject.toml  readme.md  recommendations.py  run.sh  server.py  store.db  tables.py  test_bootstrap.py  test_recommendation.py  test_tables.py  test_utils.py  utils.py
data/: customer-feedback-json.json  customer-json.json  marketing-campaigns-json.json  products-json.json
