[tool.poetry]
name = "nacelle"
version = "0.1.0"
description = ""
authors = ["brianyeh <heynairb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openapi = "^2.0.0"
openai = "^1.52.2"
requests = "^2.32.3"
aiofiles = "^24.1.0"
aiosqlite = "^0.20.0"
fastapi = "^0.115.3"
gunicorn = "^23.0.0"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
